@@ -1,3 +1,10 @@
+2009-07-23  Gordon Williams <gordon.williams@collabora.co.uk>
+
+	This resolves 127320 - home screen panning gets stuck in middle
+	* src/home/hd-home.c: Added lots of debug messages with a DRAG_DEBUG 
+	  define. Fixed drag to middle of screen bug by ignoring motion events
+	  (which clutter has delayed) after the stylus is released.
+
 2009-07-23  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>
 
 	* src/util/hd-volume-profile.c (hd_volume_profile_init): Add a
